aws/aws-vce-without-vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {
    "ExistingVpc" : {
      "Description" : "Existing VPC",
      "Type" : "AWS::EC2::VPC::Id"
    },
    "NeedNewPublicSubnet" : {
      "Description" : "Whether or not to create a new subnet for public side",
      "Default" : "No",
      "Type" : "String",
      "AllowedValues" : ["No"]
    },
    "ExistingPrivateSubnet" : {
      "Description" : "Existing subnet for the private side",
      "Type" : "AWS::EC2::Subnet::Id"
    },
    "ExistingPublicSubnet" : {
      "Description" : "Existing subnet for the public side",
      "Type" : "AWS::EC2::Subnet::Id"
    },
    "VeloCloudEdgeName" : {
      "Description" : "Name of VCE to be deployed",
      "Type" : "String"
    },  
    "ActivationKey" : {
      "Description" : "Virtual Edge Activation Key",
      "Type" : "String",
      "AllowedPattern": "^[A-Z0-9-]+$"
    },
    "IgnoreCertificateValidation" : {
      "Description" : "Set to yes if using private or self signed certificate on the VCO",
      "Type" : "String",
      "Default" : "false",
      "AllowedValues" : ["true", "false"]
    },
    "VCO" : {
      "Description" : "VCO IP or FQDN",
      "Type" : "String",
      "Default" : "vco21-usvi1.velocloud.net"
    },
    "Ge1IpAddr" : {
      "Description" : "GE1 IP address (must match CIDR block for the public side of the VCE",
      "Type" : "String",
      "Default" : "172.16.1.253",
      "AllowedPattern" : "^[0-9\\.]+"    
    },
    "Ge2IpAddr" : {
      "Description" : "GE2 IP address (must match CIDR block for the public side of the VCE",
      "Type" : "String",
      "Default" : "172.16.1.254",
      "AllowedPattern" : "^[0-9\\.]+"    
    },
    "Ge3IpAddr" : {
      "Description" : "GE3 IP address (must match CIDR block for the private side of the VCE",
      "Type" : "String",
      "Default" : "172.16.0.254",
      "AllowedPattern" : "^[0-9\\.]+"    
    },
    "MyKeyName" : {
      "Description" : "Amazon EC2 Key Pair",
      "Type" : "AWS::EC2::KeyPair::KeyName"
    },
  },
  "Resources": {
    "dopt98556ff2": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "PublicIpAddress": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
     "VceInterfaceGe1": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "ExistingPublicSubnet"
        },
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": { "Ref" : "Ge1IpAddr" },
            "Primary": "true"
          }
        ],
        "GroupSet": [
          {
            "Ref": "sgVeloCloudVirtualEdge241AutogenByAWSMP"
          }
        ]
      }
    },   
    "VceInterfaceGe2": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "ExistingPublicSubnet"
        },
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": { "Ref" : "Ge2IpAddr" },
            "Primary": "true"
          }
        ],
        "GroupSet": [
          {
            "Ref": "sgVeloCloudVirtualEdge241AutogenByAWSMP"
          }
        ]
      }
    },
    "VceInterfaceGe3": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "ExistingPrivateSubnet"
        },
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": { "Ref" : "Ge3IpAddr" },
            "Primary": "true"
          }
        ],
        "GroupSet": [
          {
            "Ref": "sgdefault"
          }
        ]
      }
    },
    "VeloCloudEdge": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "EbsOptimized": "true",
        "ImageId": "ami-da7a56cc",
        "InstanceType": "c4.large",
        "KeyName": { "Ref" : "MyKeyName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Ref" : "VeloCloudEdgeName" }
          },
          {
            "Key": "Owner",
            "Value": "Kangwarn"
          },
          {
            "Key": "auto:start",
            "Value": "* * * * *"
          }
        ],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
          "#cloud-config\n",
          "velocloud:\n",
          "  vce:\n",
          "    vco: ", { "Ref": "VCO" }, "\n",
          "    activation_code: ", { "Ref": "ActivationKey" }, "\n",
          "    vco_ignore_cert_errors: ", { "Ref": "IgnoreCertificateValidation" }, "\n"
        ]]}},
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "false",
            "NetworkInterfaceId":  { "Ref": "VceInterfaceGe1"},
            "DeviceIndex": 0
          },
          {
            "DeleteOnTermination": "false",
            "NetworkInterfaceId":  { "Ref": "VceInterfaceGe2"},
            "DeviceIndex": 1
          },
          {
            "DeleteOnTermination": "false",
            "NetworkInterfaceId":  { "Ref": "VceInterfaceGe3"},
            "DeviceIndex": 2
          }
        ]
      }
    },
    "sgdefault": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "default group",
        "VpcId": {
          "Ref": "ExistingVpc"
        }
      }
    },
    "sgVeloCloudVirtualEdge241AutogenByAWSMP": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "This security group was generated by AWS Marketplace and is based on recommended settings for VeloCloud Virtual Edge version 2.4.1 provided by VeloCloud Networks, Inc.",
        "VpcId": {
          "Ref": "ExistingVpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Virtual Edge Security Group"
          }
        ]
      }
    },
    "assoc1": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "PublicIpAddress",
            "AllocationId"
          ]
        },
        "NetworkInterfaceId": {
          "Ref": "VceInterfaceGe2"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVeloCloudVirtualEdge241AutogenByAWSMP"
        },
        "IpProtocol": "udp",
        "FromPort": "161",
        "ToPort": "161",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVeloCloudVirtualEdge241AutogenByAWSMP"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVeloCloudVirtualEdge241AutogenByAWSMP"
        },
        "IpProtocol": "udp",
        "FromPort": "2426",
        "ToPort": "2426",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVeloCloudVirtualEdge241AutogenByAWSMP"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Outputs" : {
    "PublicIpAddressValue" : {
      "Description": "Public IP of VCE",  
      "Value" : { "Ref" : "PublicIpAddress" }
    }
  },
  "Description" : ""
}
